--- a/MyFOC_V1.0.ioc
+++ b/MyFOC_V1.0.ioc
@@ -10,21 +10,26 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM4
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP3=TIM1
+Mcu.IP4=TIM4
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB6
-Mcu.Pin6=PB7
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM4_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin3=PA8
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA11
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB6
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -42,10 +47,18 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Signal=S_TIM1_CH3
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=Drive_EN
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.Signal=S_TIM1_CH2
 PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
@@ -89,7 +102,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -111,6 +124,16 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.IPParameters=Prescaler,AutoReloadPreload
 TIM4.Prescaler=71
